--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,5 +3,7 @@ $principal : #f9f9f9;
 $oscurouno : #3E4042;
 $oscurodos : #2A3143;
 $claro: #f9f9f9;
+$blanco:#ffffff;
 $verdeuno : #51A7B8;
+$verdedos : #00C5BE;
 
