--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ html { font-size: 62.5%; }
 
 body { font-family: "Poppins", Sans-serif; font-size: 1.6rem; letter-spacing: 0.01rem; line-height: 1.7em; background-color: #fff; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; overflow-x: hidden; }
 
+section { overflow-x: hidden; }
+
 p { color: #3E4042; font-size: 1em; font-weight: 200; text-align: left; }
 
 a:hover { text-decoration: none; }
@@ -47,7 +49,7 @@ ul li { display: inline-block; list-style: none; }
 
 header { background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.9)), url("../img/fondo.jpg"); background-position: center center; background-size: cover; display: flex; align-items: center; height: 80vh; }
 
-.menu { position: absolute; left: 90%; top: 5%; }
+.menu { position: absolute; left: 90%; top: 5%; z-index: 100; }
 
 .menu img { width: 35px; }
 
@@ -114,6 +116,8 @@ header { background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 25
 
 .subtitle__section { color: #3E4042; font-size: 2em; font-weight: 300; text-align: center; margin: 1em 0; padding: 0 2em; }
 
+@media (min-width: 768px) and (max-width: 1023px) { .subtitle__section { font-size: 1.5em; } }
+
 section p { color: #3E4042; font-size: 1em; font-weight: 200; text-align: center; }
 
 .process__item { padding: 4em 0; text-align: center; }
@@ -131,6 +135,8 @@ section p { color: #3E4042; font-size: 1em; font-weight: 200; text-align: center
 .mywork .title__section { color: #f9f9f9; font-size: 2.8em; text-align: center; }
 
 .mywork .subtitle__section { color: #f9f9f9; font-size: 2em; font-weight: 300; text-align: center; margin: 1em 0; padding: 0 2em; }
+
+@media (min-width: 768px) and (max-width: 1023px) { .mywork .subtitle__section { font-size: 1.5em; } }
 
 .mywork .burbuja { border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; background-color: #f9f9f9; height: 6em; left: -3em; margin-top: 5em; opacity: 0.3; position: absolute; width: 6em; }
 
@@ -174,6 +180,8 @@ footer .title__section { color: #f9f9f9; font-size: 2.3em; text-align: center; }
 
 footer .subtitle__section { color: #f9f9f9; font-size: 2em; font-weight: 300; text-align: center; margin: 1em 0; padding: 0 2em; }
 
+@media (min-width: 768px) and (max-width: 1023px) { footer .subtitle__section { font-size: 1.5em; } }
+
 footer .subtitle__section span { color: #00C5BE; font-weight: 500; }
 
 footer p { color: #f9f9f9; font-size: 1.2em; letter-spacing: 1px; text-align: center; }
@@ -186,7 +194,23 @@ footer ul li { display: inline-block; margin-right: 2em; }
 
 footer ul li a img { width: 28px; height: 28px; }
 
-@media screen and (max-width: 480px) { header { height: 100vh; }
-  .header__content h1 { font-size: 2em; line-height: 1em; }
+@media screen and (max-width: 1366px) { header { height: 70vh; }
+  .header__content img { width: 70%; margin-top: 15%; } }
+
+@media screen and (max-width: 768px) { .header__content h1 { font-size: 3em; line-height: 1em; }
+  .header__content img { margin-top: 35%; width: 100%; }
+  .zbutton, .zbutton--lineal, .zbutton--lineal--blanco { padding: 0.5em 0em; font-size: 1em; }
+  .burbuja { display: none; }
+  .process__item h3 { font-size: 1.2em; }
+  .process__item p { margin-left: 0%; width: 100%; }
+  .blog__item--right h3 { font-size: 1em; padding: 0.3em 0; } }
+
+@media screen and (max-width: 480px) { header { height: 90vh; }
+  .header__content img { margin-top: 5%; margin-left: 10%; width: 70%; }
+  .header__content h1 { font-size: 1.4em; line-height: 1em; margin-bottom: 1em; text-align: center; }
+  .header__content h2 { text-align: center; }
   .header__content p { display: none; }
-  .blog__item--left { height: 200px; } }
+  .blog__item--left { height: 200px; }
+  .header__content__info { padding: 1em 2em; }
+  .menu { left: 85%; }
+  .zbutton, .zbutton--lineal, .zbutton--lineal--blanco { padding: 0.5em 0em; font-size: 0.8em; margin-bottom: 1em; } }
