--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -22,6 +22,12 @@
 	text-align: center;
 	margin: 1em 0;
 	padding: 0 2em;
+
+	$ipad : "(min-width: 768px) and (max-width: 1023px)";
+
+	@media #{$ipad}{
+		font-size: 1.5em;
+	}
 }
 
 @mixin parrafo($fsize: 1em, $talign:left, $fweight: 200){
