--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,11 @@ body{
 	-webkit-font-smoothing: antialiased;
 	overflow-x: hidden;
 }
+
+section{
+	overflow-x: hidden;
+}
+
 p{
 	@include parrafo;
 
@@ -87,6 +92,7 @@ header{
 	position: absolute;
 	left: 90%;
 	top: 5%;
+	z-index: 100;
 
 	img{
 		width: 35px;
@@ -467,23 +473,77 @@ footer{
 
 //MEDIA QUERIES ///////////
 
-@media screen and (max-width: 1440px){
-
-
-}
-
 @media screen and (max-width: 1366px){
+	header{
+		height: 70vh;
+	}
 
+	.header__content img {
+	    width: 70%;
+	    margin-top: 15%;
+	}
 }
 
+@media screen and (max-width: 768px){
+	.header__content {
+	    h1{
+	    	font-size: 3em;
+	    	line-height: 1em;
+	    }
+	
+		& img {
+	    	margin-top: 35%;
+	    	width: 100%;
+	    }
+	}
+
+	.zbutton, .zbutton--lineal, .zbutton--lineal--blanco {
+    	padding: 0.5em 0em;
+    	font-size: 1em;
+    }
+    .burbuja{
+    	display: none;
+    }
+	
+	.process__item  {
+	    h3{
+	    	font-size: 1.2em;
+	    }
+	    p{
+	    	margin-left: 0%;
+	    	width: 100%;
+		}
+	}
+
+	.blog__item--right h3 {
+	    font-size: 1em;
+    	padding: 0.3em 0;
+	}
+
+
+}
 
 @media screen and (max-width: 480px){
 	header{
-		height: 100vh;
+		height: 90vh;
 	}
-	.header__content h1{
-		font-size: 2em;
-		line-height: 1em;
+
+	.header__content {
+		img {
+		    margin-top: 5%;
+		    margin-left: 10%;
+		    width: 70%;
+		}
+
+		h1{
+			font-size: 1.4em;
+			line-height: 1em;
+			margin-bottom: 1em;
+			text-align: center;
+		}
+		h2{
+			text-align: center;
+		}
 	}
 
 	.header__content p{
@@ -493,5 +553,19 @@ footer{
 	.blog__item--left{
 		height: 200px;
 	}
+	
+	.header__content__info {
+    	padding: 1em 2em;
+	}
+
+	.menu {
+	   left: 85%;
+	}
+
+	.zbutton, .zbutton--lineal, .zbutton--lineal--blanco {
+    	padding: 0.5em 0em;
+    	font-size: 0.8em;
+    	margin-bottom: 1em;
+    }
 
 }
