--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,38 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900|Rosario:400,700");
 .zbutton, .zbutton--lineal, .zbutton--lineal--blanco { padding: 0.5em 0.6em; font-size: 1.3em; margin: 0 auto; text-align: center; }
 
+@media screen and (max-width: 1366px) { header { height: 70vh; }
+  .header__content img { width: 70%; margin-top: 15%; }
+  .header__works { height: 80vh; }
+  .header__works .mywork__carrousel { margin-top: 0em; } }
+
+@media screen and (max-width: 768px) { .header__content h1 { font-size: 3em; line-height: 1em; }
+  .header__content img { margin-top: 35%; width: 100%; }
+  .zbutton, .zbutton--lineal, .zbutton--lineal--blanco { padding: 0.5em 0em; font-size: 1em; }
+  .burbuja { display: none; }
+  .process__item h3 { font-size: 1.2em; }
+  .process__item p { margin-left: 0%; width: 100%; }
+  .blog__item--right h3 { font-size: 1em; padding: 0.3em 0; }
+  .header__works { height: 50vh; }
+  .allworks__item .info { width: 87%; }
+  .allworks__item .info h2 { font-size: 1.5em; }
+  .allworks__item .info h3 { font-size: 1em; } }
+
+@media screen and (max-width: 480px) { header { height: 94vh; }
+  .header__content img { margin-top: 5%; margin-left: 20%; width: 60%; }
+  .header__content h1 { font-size: 1.4em; line-height: 1em; margin-bottom: 1em; text-align: center; }
+  .header__content h2 { text-align: center; }
+  .header__content p { display: none; }
+  .blog__item--left { height: 200px; }
+  .header__content__info { padding: 1em 2em; }
+  .menu { left: 85%; }
+  .zbutton, .zbutton--lineal, .zbutton--lineal--blanco { padding: 0.5em 0em; font-size: 0.8em; margin-bottom: 1em; }
+  .header__works { height: 76vh; }
+  .header__works .mywork__carrousel { margin-top: 0em; }
+  .title__section, .mywork .title__section { font-size: 2.5em; }
+  .subtitle__section, .mywork .subtitle__section { font-size: 1.2em; margin: 1em 0; padding: 0 0em; }
+  footer .subtitle__section { font-size: 1.5em; margin: 1em 0; padding: 0 1em; } }
+
 /*************************************/
 /* Basic Styles --------------------------------------------------------*/
 /*************************************/
@@ -49,7 +81,7 @@ ul li { display: inline-block; list-style: none; }
 
 .header__home { background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.9)), url("../img/fondo.jpg"); background-position: center center; background-size: cover; display: flex; align-items: center; height: 80vh; }
 
-.header__works { background-color: #51A7B8; }
+.header__works { background-color: #51A7B8; overflow: hidden; }
 
 .menu { position: absolute; left: 90%; top: 5%; z-index: 100; }
 
@@ -222,9 +254,16 @@ footer ul li a img { width: 28px; height: 28px; }
 
 .allworks__item .info:hover { border-top: 1em solid #ffffff; background-color: #51A7B8; color: #ffffff; padding-top: 2em; }
 
+.work p { padding-top: 2em; text-align: left; }
+
+.work img { padding-top: 2em; width: 100%; }
+
+.work .work__image { margin-bottom: 2em; }
+
 @media screen and (max-width: 1366px) { header { height: 70vh; }
   .header__content img { width: 70%; margin-top: 15%; }
-  .header__works { height: 70vh; } }
+  .header__works { height: 80vh; }
+  .header__works .mywork__carrousel { margin-top: 0em; } }
 
 @media screen and (max-width: 768px) { .header__content h1 { font-size: 3em; line-height: 1em; }
   .header__content img { margin-top: 35%; width: 100%; }
